# ai-services-plane

./: .env.example  .gitignore  AGENTS.md  README.md  REVIEWER.md  WORK_ORDER.md  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: ci.yaml
docker/: ai-orchestrator.Dockerfile  ai-orchestrator.dev.Dockerfile  ai-orchestrator.prod.Dockerfile
scripts/: gen_proto.sh
