[project]
name = "ai-services-plane"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ai-core",
    "ai-infra",
    "ai-orchestrator",
]

[tool.uv.sources]
ai-orchestrator = { workspace = true }
ai-core = { workspace = true }
ai-infra = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "anyio>=4.11.0",
    "mypy>=1.18.2",
    "mypy-protobuf>=3.7.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.5",
    "trio>=0.32.0",
    "types-grpcio>=1.0.0.20251009",
    "types-protobuf>=6.32.1.20251210",
]

[tool.ruff]
extend-exclude = ["packages/ai-orchestrator/src/ai_orchestrator/grpc/generated"]

[tool.mypy]
exclude = ["packages/ai-orchestrator/src/ai_orchestrator/grpc/generated"]
